// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to input a value 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 bxLfsC"
          role="button"
        >
          Simple
        </span>
        <label
          class="flex"
        >
          <input
            checked=""
            class="Toggle__Input-sc-6s3wfu-0 lksfSS"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-1 fOBaxM"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-2 jLcWyW"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 ddtFSz"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative"
    >
      <div
        class="fixed invisible w-auto whitespace-nowrap"
      >
        0.447…
      </div>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 bDHBGq"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 lpjmUZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="InputCurrency"
            type="text"
            value="0.447"
          />
        </div>
      </div>
      <div
        class="absolute bottom-0 px-1 w-full"
      >
        <div
          class="flex flex-wrap justify-center"
          data-testid="Range"
        >
          <div
            class="Range__Track-sc-1xikdd-0 eUXcsE"
            data-testid="Range__track"
            style="transform: scale(1); cursor: pointer;"
          >
            <div
              class="Range__TrackFilled-sc-1xikdd-1 dqZquU"
              data-testid="Range__track__filled"
            >
              <div
                aria-valuemax="0.5"
                aria-valuemin="0.006"
                aria-valuenow="0.447"
                class="Range__Thumb-sc-1xikdd-2 hBqhUX"
                data-testid="Range__thumb"
                draggable="false"
                role="slider"
                style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should display converted values when on live net 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 ddtFSz"
          role="button"
        >
          Simple
        </span>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-0 lksfSS"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-1 fOBaxM"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-2 jLcWyW"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bxLfsC"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
          <span
            class="text-sm text-theme-secondary-500"
            data-testid="AmountFiat"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
          <span
            class="text-sm text-theme-secondary-500"
            data-testid="AmountFiat"
          >
            €0.00
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
          <span
            class="text-sm text-theme-secondary-500"
            data-testid="AmountFiat"
          >
            €0.00
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should keep different values for simple and advanced view types 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 bxLfsC"
          role="button"
        >
          Simple
        </span>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-0 lksfSS"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-1 fOBaxM"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-2 jLcWyW"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 ddtFSz"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="relative"
    >
      <div
        class="fixed invisible w-auto whitespace-nowrap"
      >
        0.3…
      </div>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 bDHBGq"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 lpjmUZ p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="InputCurrency"
            type="text"
            value="0.3"
          />
        </div>
      </div>
      <div
        class="absolute bottom-0 px-1 w-full"
      >
        <div
          class="flex flex-wrap justify-center"
          data-testid="Range"
        >
          <div
            class="Range__Track-sc-1xikdd-0 eUXcsE"
            data-testid="Range__track"
            style="transform: scale(1); cursor: pointer;"
          >
            <div
              class="Range__TrackFilled-sc-1xikdd-1 dqZquU"
              data-testid="Range__track__filled"
            >
              <div
                aria-valuemax="0.5"
                aria-valuemin="0.006"
                aria-valuenow="0.3"
                class="Range__Thumb-sc-1xikdd-2 hBqhUX"
                data-testid="Range__thumb"
                draggable="false"
                role="slider"
                style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should keep different values for simple and advanced view types 2`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 ddtFSz"
          role="button"
        >
          Simple
        </span>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-0 lksfSS"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-1 fOBaxM"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-2 jLcWyW"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bxLfsC"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 ddtFSz"
          role="button"
        >
          Simple
        </span>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-0 lksfSS"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-1 fOBaxM"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-2 jLcWyW"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bxLfsC"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should update value when clicking button Average 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 ddtFSz"
          role="button"
        >
          Simple
        </span>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-0 lksfSS"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-1 fOBaxM"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-2 jLcWyW"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bxLfsC"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should update value when clicking button Fast 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 ddtFSz"
          role="button"
        >
          Simple
        </span>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-0 lksfSS"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-1 fOBaxM"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-2 jLcWyW"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bxLfsC"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="false"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="true"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should update value when clicking button Slow 1`] = `
<DocumentFragment>
  <div
    class="relative"
    data-testid="InputFee"
  >
    <div
      class="absolute right-0 -mt-7"
    >
      <div
        class="flex items-center"
      >
        <span
          class="Switch__SwitchText-sc-161iiro-0 ddtFSz"
          role="button"
        >
          Simple
        </span>
        <label
          class="flex"
        >
          <input
            class="Toggle__Input-sc-6s3wfu-0 lksfSS"
            type="checkbox"
          />
          <div
            class="Toggle__Handle-sc-6s3wfu-1 fOBaxM"
          >
            <span
              class="Toggle__HandleInner-sc-6s3wfu-2 jLcWyW"
            />
          </div>
        </label>
        <span
          class="Switch__SwitchText-sc-161iiro-0 bxLfsC"
          role="button"
        >
          Advanced
        </span>
      </div>
    </div>
    <div
      class="inline-flex items-center space-x-3 w-full"
      data-testid="ButtonGroup"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        aria-label="0.006"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Slow
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.006 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.456"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Average
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.456 DARK
          </span>
        </div>
      </button>
      <button
        aria-checked="false"
        aria-label="0.5"
        class="ButtonGroup__ButtonGroupOptionStyled-sc-2f0qmd-0 dDjZqB"
        data-testid="ButtonGroupOption"
        role="radio"
        type="button"
      >
        <div
          class="flex flex-col space-y-2"
        >
          <div>
            Fast
          </div>
          <span
            class="text-sm"
            data-testid="AmountCrypto"
          >
            0.5 DARK
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
